src/generated/antlr/CWScriptParser.ts
// Generated from generated/antlr/CWScriptParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";


export class CWScriptParser extends Parser {
	public static readonly SHEBANG = 1;
	public static readonly Comment = 2;
	public static readonly BlockComment = 3;
	public static readonly IMPORT = 4;
	public static readonly FROM = 5;
	public static readonly AS = 6;
	public static readonly IF = 7;
	public static readonly ELSE = 8;
	public static readonly IN = 9;
	public static readonly LET = 10;
	public static readonly TRUE = 11;
	public static readonly FALSE = 12;
	public static readonly FOR = 13;
	public static readonly WHILE = 14;
	public static readonly RETURN = 15;
	public static readonly LPAREN = 16;
	public static readonly RPAREN = 17;
	public static readonly LBRACE = 18;
	public static readonly RBRACE = 19;
	public static readonly LBRACK = 20;
	public static readonly RBRACK = 21;
	public static readonly COLON2 = 22;
	public static readonly COLON = 23;
	public static readonly SCOLON = 24;
	public static readonly COMMA = 25;
	public static readonly AMP2 = 26;
	public static readonly PIPE2 = 27;
	public static readonly SLIM_ARROW = 28;
	public static readonly EQ2 = 29;
	public static readonly EQ1 = 30;
	public static readonly NEQ = 31;
	public static readonly LTE = 32;
	public static readonly LT = 33;
	public static readonly GTE = 34;
	public static readonly GT = 35;
	public static readonly ASSIGNOP = 36;
	public static readonly PLUS2 = 37;
	public static readonly PLUS = 38;
	public static readonly DASH2 = 39;
	public static readonly DASH = 40;
	public static readonly STAR = 41;
	public static readonly BANG = 42;
	public static readonly QUESTION2 = 43;
	public static readonly QUESTION1 = 44;
	public static readonly SLASH = 45;
	public static readonly PERCENT = 46;
	public static readonly FN = 47;
	public static readonly INSTANTIATE = 48;
	public static readonly EXEC = 49;
	public static readonly QUERY = 50;
	public static readonly CONTRACT = 51;
	public static readonly EVENT = 52;
	public static readonly STRUCT = 53;
	public static readonly ENUM = 54;
	public static readonly INTERFACE = 55;
	public static readonly IMPLEMENTS = 56;
	public static readonly EXTENDS = 57;
	public static readonly SEND = 58;
	public static readonly LOG = 59;
	public static readonly FAIL = 60;
	public static readonly STATE = 61;
	public static readonly ERROR = 62;
	public static readonly Number = 63;
	public static readonly Ident = 64;
	public static readonly DOT3 = 65;
	public static readonly DOT2 = 66;
	public static readonly DOT1 = 67;
	public static readonly WS = 68;
	public static readonly NL = 69;
	public static readonly String = 70;
	public static readonly EscapeSequence = 71;
	public static readonly RULE_program = 0;
	public static readonly RULE_cmdsep = 1;
	public static readonly RULE_importDef = 2;
	public static readonly RULE_namedImport = 3;
	public static readonly RULE_namedImports = 4;
	public static readonly RULE_root = 5;
	public static readonly RULE_expr = 6;
	public static readonly RULE_exprx = 7;
	public static readonly RULE_scope = 8;
	public static readonly RULE_rval = 9;
	public static readonly RULE_binaryOp = 10;
	public static readonly RULE_unaryPreOp = 11;
	public static readonly RULE_unaryPostOp = 12;
	public static readonly RULE_nsIdent = 13;
	public static readonly RULE_stateIdent = 14;
	public static readonly RULE_let = 15;
	public static readonly RULE_varDecl = 16;
	public static readonly RULE_destructuring = 17;
	public static readonly RULE_globalFnDef = 18;
	public static readonly RULE_methodDef = 19;
	public static readonly RULE_blockFnDef = 20;
	public static readonly RULE_fnName = 21;
	public static readonly RULE_fnSigArgs = 22;
	public static readonly RULE_fnSigRet = 23;
	public static readonly RULE_fnArg = 24;
	public static readonly RULE_contractDef = 25;
	public static readonly RULE_contractBody = 26;
	public static readonly RULE_interfaceDef = 27;
	public static readonly RULE_interfaceBody = 28;
	public static readonly RULE_structureDef = 29;
	public static readonly RULE_eventDef = 30;
	public static readonly RULE_errorDef = 31;
	public static readonly RULE_stateDef = 32;
	public static readonly RULE_typeDecl = 33;
	public static readonly RULE_typedIdent = 34;
	public static readonly RULE_namedTupleType = 35;
	public static readonly RULE_block = 36;
	public static readonly RULE_forLoop = 37;
	public static readonly RULE_whileLoop = 38;
	public static readonly RULE_ifStmt = 39;
	public static readonly RULE_sendStmt = 40;
	public static readonly RULE_queryStmt = 41;
	public static readonly RULE_logStmt = 42;
	public static readonly RULE_failStmt = 43;
	public static readonly RULE_createEventOrError = 44;
	public static readonly RULE_literal = 45;
	public static readonly RULE_array = 46;
	public static readonly RULE_map = 47;
	public static readonly RULE_mapField = 48;
	public static readonly RULE_tuple = 49;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "cmdsep", "importDef", "namedImport", "namedImports", "root", 
		"expr", "exprx", "scope", "rval", "binaryOp", "unaryPreOp", "unaryPostOp", 
		"nsIdent", "stateIdent", "let", "varDecl", "destructuring", "globalFnDef", 
		"methodDef", "blockFnDef", "fnName", "fnSigArgs", "fnSigRet", "fnArg", 
		"contractDef", "contractBody", "interfaceDef", "interfaceBody", "structureDef", 
		"eventDef", "errorDef", "stateDef", "typeDecl", "typedIdent", "namedTupleType", 
		"block", "forLoop", "whileLoop", "ifStmt", "sendStmt", "queryStmt", "logStmt", 
		"failStmt", "createEventOrError", "literal", "array", "map", "mapField", 
		"tuple",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, "'import'", "'from'", "'as'", 
		"'if'", "'else'", "'in'", "'let'", "'true'", "'false'", "'for'", "'while'", 
		"'return'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'::'", "':'", "';'", 
		"','", "'&&'", "'||'", "'->'", "'=='", "'='", "'!='", "'<='", "'<'", "'>='", 
		"'>'", undefined, "'++'", "'+'", "'--'", "'-'", "'*'", "'!'", "'??'", 
		"'?'", "'/'", "'%'", "'fn'", "'instantiate'", "'exec'", "'query'", "'contract'", 
		"'event'", "'struct'", "'enum'", "'interface'", "'implements'", "'extends'", 
		"'send'", "'log'", "'fail'", "'state'", "'error'", undefined, undefined, 
		"'...'", "'..'", "'.'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "SHEBANG", "Comment", "BlockComment", "IMPORT", "FROM", "AS", 
		"IF", "ELSE", "IN", "LET", "TRUE", "FALSE", "FOR", "WHILE", "RETURN", 
		"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COLON2", 
		"COLON", "SCOLON", "COMMA", "AMP2", "PIPE2", "SLIM_ARROW", "EQ2", "EQ1", 
		"NEQ", "LTE", "LT", "GTE", "GT", "ASSIGNOP", "PLUS2", "PLUS", "DASH2", 
		"DASH", "STAR", "BANG", "QUESTION2", "QUESTION1", "SLASH", "PERCENT", 
		"FN", "INSTANTIATE", "EXEC", "QUERY", "CONTRACT", "EVENT", "STRUCT", "ENUM", 
		"INTERFACE", "IMPLEMENTS", "EXTENDS", "SEND", "LOG", "FAIL", "STATE", 
		"ERROR", "Number", "Ident", "DOT3", "DOT2", "DOT1", "WS", "NL", "String", 
		"EscapeSequence",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CWScriptParser._LITERAL_NAMES, CWScriptParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CWScriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "CWScriptParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return CWScriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CWScriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CWScriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CWScriptParser.RULE_program);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.SHEBANG) {
				{
				this.state = 100;
				this.match(CWScriptParser.SHEBANG);
				}
			}

			this.state = 106;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CWScriptParser.SCOLON || _la === CWScriptParser.NL) {
				{
				{
				this.state = 103;
				this.cmdsep();
				}
				}
				this.state = 108;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.IMPORT) {
				{
				this.state = 125;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 109;
						this.importDef();
						this.state = 113;
						this._errHandler.sync(this);
						_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
						while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
							if (_alt === 1) {
								{
								{
								this.state = 110;
								this.match(CWScriptParser.NL);
								}
								}
							}
							this.state = 115;
							this._errHandler.sync(this);
							_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
						}
						this.state = 116;
						this.cmdsep();
						this.state = 120;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						while (_la === CWScriptParser.NL) {
							{
							{
							this.state = 117;
							this.match(CWScriptParser.NL);
							}
							}
							this.state = 122;
							this._errHandler.sync(this);
							_la = this._input.LA(1);
						}
						}
						}
					}
					this.state = 127;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
				}
				this.state = 128;
				this.importDef();
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CWScriptParser.SCOLON || _la === CWScriptParser.NL) {
					{
					this.state = 129;
					this.cmdsep();
					}
				}

				}
			}

			this.state = 157;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 47)) & ~0x1F) === 0 && ((1 << (_la - 47)) & ((1 << (CWScriptParser.FN - 47)) | (1 << (CWScriptParser.EXEC - 47)) | (1 << (CWScriptParser.QUERY - 47)) | (1 << (CWScriptParser.CONTRACT - 47)) | (1 << (CWScriptParser.STRUCT - 47)) | (1 << (CWScriptParser.INTERFACE - 47)))) !== 0)) {
				{
				this.state = 150;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 134;
						this.root();
						this.state = 138;
						this._errHandler.sync(this);
						_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
						while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
							if (_alt === 1) {
								{
								{
								this.state = 135;
								this.match(CWScriptParser.NL);
								}
								}
							}
							this.state = 140;
							this._errHandler.sync(this);
							_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
						}
						this.state = 141;
						this.cmdsep();
						this.state = 145;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						while (_la === CWScriptParser.NL) {
							{
							{
							this.state = 142;
							this.match(CWScriptParser.NL);
							}
							}
							this.state = 147;
							this._errHandler.sync(this);
							_la = this._input.LA(1);
						}
						}
						}
					}
					this.state = 152;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
				}
				this.state = 153;
				this.root();
				this.state = 155;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CWScriptParser.SCOLON || _la === CWScriptParser.NL) {
					{
					this.state = 154;
					this.cmdsep();
					}
				}

				}
			}

			this.state = 159;
			this.match(CWScriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cmdsep(): CmdsepContext {
		let _localctx: CmdsepContext = new CmdsepContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CWScriptParser.RULE_cmdsep);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 162;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 161;
					_la = this._input.LA(1);
					if (!(_la === CWScriptParser.SCOLON || _la === CWScriptParser.NL)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 164;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importDef(): ImportDefContext {
		let _localctx: ImportDefContext = new ImportDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CWScriptParser.RULE_importDef);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 166;
			this.match(CWScriptParser.IMPORT);
			this.state = 191;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.AS || _la === CWScriptParser.LBRACE || _la === CWScriptParser.STAR || _la === CWScriptParser.Ident) {
				{
				this.state = 189;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case CWScriptParser.AS:
				case CWScriptParser.STAR:
					{
					this.state = 168;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === CWScriptParser.STAR) {
						{
						this.state = 167;
						this.match(CWScriptParser.STAR);
						}
					}

					this.state = 170;
					this.match(CWScriptParser.AS);
					this.state = 171;
					this.match(CWScriptParser.Ident);
					}
					break;
				case CWScriptParser.LBRACE:
					{
					this.state = 172;
					this.match(CWScriptParser.LBRACE);
					this.state = 176;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === CWScriptParser.NL) {
						{
						{
						this.state = 173;
						this.match(CWScriptParser.NL);
						}
						}
						this.state = 178;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 179;
					this.namedImports();
					this.state = 183;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === CWScriptParser.NL) {
						{
						{
						this.state = 180;
						this.match(CWScriptParser.NL);
						}
						}
						this.state = 185;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 186;
					this.match(CWScriptParser.RBRACE);
					}
					break;
				case CWScriptParser.Ident:
					{
					this.state = 188;
					this.namedImports();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			this.state = 193;
			this.match(CWScriptParser.FROM);
			this.state = 194;
			this.match(CWScriptParser.String);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namedImport(): NamedImportContext {
		let _localctx: NamedImportContext = new NamedImportContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CWScriptParser.RULE_namedImport);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 196;
			this.match(CWScriptParser.Ident);
			this.state = 199;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.AS) {
				{
				this.state = 197;
				this.match(CWScriptParser.AS);
				this.state = 198;
				this.match(CWScriptParser.Ident);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namedImports(): NamedImportsContext {
		let _localctx: NamedImportsContext = new NamedImportsContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CWScriptParser.RULE_namedImports);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 201;
			this.namedImport();
			this.state = 205;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 19, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 202;
					this.match(CWScriptParser.NL);
					}
					}
				}
				this.state = 207;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 19, this._ctx);
			}
			this.state = 224;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 22, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 208;
					this.match(CWScriptParser.COMMA);
					this.state = 212;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === CWScriptParser.NL) {
						{
						{
						this.state = 209;
						this.match(CWScriptParser.NL);
						}
						}
						this.state = 214;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 215;
					this.namedImport();
					this.state = 219;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 21, this._ctx);
					while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
						if (_alt === 1) {
							{
							{
							this.state = 216;
							this.match(CWScriptParser.NL);
							}
							}
						}
						this.state = 221;
						this._errHandler.sync(this);
						_alt = this.interpreter.adaptivePredict(this._input, 21, this._ctx);
					}
					}
					}
				}
				this.state = 226;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 22, this._ctx);
			}
			this.state = 230;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 23, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 227;
					this.match(CWScriptParser.NL);
					}
					}
				}
				this.state = 232;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 23, this._ctx);
			}
			this.state = 234;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CWScriptParser.COMMA) {
				{
				this.state = 233;
				this.match(CWScriptParser.COMMA);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public root(): RootContext {
		let _localctx: RootContext = new RootContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CWScriptParser.RULE_root);
		try {
			this.state = 240;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CWScriptParser.FN:
			case CWScriptParser.EXEC:
			case CWScriptParser.QUERY:
				_localctx = new FunctionDefRootContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 236;
				this.globalFnDef();
				}
				break;
			case CWScriptParser.STRUCT:
				_localctx = new StructureDefRootContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 237;
				this.structureDef();
				}
				break;
			case CWScriptParser.CONTRACT:
				_localctx = new ContractDefRootContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 238;
				this.contractDef();
				}
				break;
			case CWScriptParser.INTERFACE:
				_localctx = new InterfaceDefRootContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 239;
				this.interfaceDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}
